k8s/applications/media/arr/seerr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr
  namespace: arr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: seerr
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
      labels:
        app: seerr
        app.kubernetes.io/name: seerr
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: seerr
          image: ghcr.io/vegops/seerr:3.3.0-r3@sha256:43e3092816fac4b8954f792d0760072e6d0f92e66f4b51cd079ea36eeac16d0f
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /seerr/config
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: synology-iscsi-nvme
        resources:
          requests:
            storage: 5Gi
