k8s/applications/media/arr/seerr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
