k8s/applications/media/arr/seerr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: envoy-internal
      namespace: network
  hostnames:
    - seerr.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
